--- a/home.css
+++ b/home.css
@@ -1035,6 +1035,7 @@ display: none;
     padding: 20px;
     width: 35%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    transform: scale(0.9);
 }
 
 .eco-search-form h2 {
